# goldtest

./: .gitignore  README.md
example/: CMakeLists.txt  main.cpp
example/src/: file_writer.cpp  file_writer.hpp  test_class.cpp  test_class.hpp
example/src/tests/: test_file.gold
example_and_tests/: CMakeLists.txt  README.md
example_and_tests/example/: file_writer.hpp
example_and_tests/example/tests/: file_writer_test.cpp
example_and_tests/tests/: stream_evaluator_tests.cpp
goldtest/: gold_stream_evaluator.hpp  goldtest.hpp  stream_evaluator_i.hpp
